log
Mon 13 May 2024 11:26:04 PM UTC: 
 tests:  0|5
total_score: 0/70
8bf7259
Tue 14 May 2024 12:26:32 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  1|5
total_score: 5/70
4c5f138
Tue 14 May 2024 12:27:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:32: error: multi-character character constant [-Werror=multichar]
   58 |            if(n->sudo[i][j] == '/0'){
      |                                ^~~~
cc1: all warnings being treated as errors
Compilation failed
8821ca1
Tue 14 May 2024 12:28:10 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
60a0e05
